--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,10 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "baseUrl": "./src",
-        "rootDir": "./",
+        "baseUrl": "./",
+        "rootDir": "./src",
         "outDir": "./dist",
         "declaration": true
-    }
+    },
+    "exclude": ["node_modules", "example", "dist"]
 }
